tests/rosetta/out/Scala/100-prisoners.scala
// Generated by Mochi compiler v0.10.30 on 2006-01-02T15:04:05Z
object _100_prisoners {
  def _now(): Int = System.nanoTime().toInt

  def shuffle(xs: List[Int]): List[Int] = {
    var arr = xs
    var i = 99
    while (i > 0) {
      val j = _now() % (i + 1)
      val tmp = (arr).apply(i).asInstanceOf[Int]
      arr = arr.updated(i, (arr).apply(j).asInstanceOf[Int])
      arr = arr.updated(j, tmp)
      i -= 1
    }
    return arr
  }
  
  def doTrials(trials: Int, np: Int, strategy: String): Unit = {
    var pardoned = 0
    var t = 0
    while (t < trials) {
      var drawers: List[Int] = List[Int]()
      var i = 0
      while (i < 100) {
        drawers = drawers :+ i
        i += 1
      }
      drawers = shuffle(drawers)
      var p = 0
      var success = true
      while (p < np) {
        var found = false
        if (strategy == "optimal") {
          var prev = p
          var d = 0
          while (d < 50) {
            val `this` = (drawers).apply(prev).asInstanceOf[Int]
            if (`this` == p) {
              found = true
              return
            }
            prev = `this`
            d += 1
          }
        } else {
          var opened: List[Boolean] = List[Boolean]()
          var k = 0
          while (k < 100) {
            opened = opened :+ false
            k += 1
          }
          var d = 0
          while (d < 50) {
            var n = _now() % 100
            while ((opened).apply(n).asInstanceOf[Boolean]) {
              n = _now() % 100
            }
            opened = opened.updated(n, true)
            if ((drawers).apply(n).asInstanceOf[Int] == p) {
              found = true
              return
            }
            d += 1
          }
        }
        if (!found) {
          success = false
          return
        }
        p += 1
      }
      if (success) {
        pardoned += 1
      }
      t += 1
    }
    val rf = (pardoned.toDouble) / (trials.toDouble) * 100
    println("  strategy = " + strategy + "  pardoned = " + pardoned.toString + " relative frequency = " + rf.toString + "%")
  }
  
  def main() = {
    val trials = 1000
    for(np <- List(10, 100)) {
      println("Results from " + trials.toString + " trials with " + np.toString + " prisoners:\n")
      for(strat <- List("random", "optimal")) {
        doTrials(trials, np, strat)
      }
    }
  }
  
  def main(args: Array[String]): Unit = {
    main()
  }
}
